<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/export_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_history"
        android:title="@string/clear_history"
        app:showAsAction="never" />

    <!-- Selection mode items -->
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_selected"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/action_exit_selection"
        android:title="@string/exit_selection"
        app:showAsAction="never"
        android:visible="false" />

</menu>
